Details
-
Bug
-
Status: Closed
-
P1: Critical
-
Resolution: Done
-
5.12.1, 5.12.2
-
-
123053bba8dc2241041c31a262420edd3583b1c7 (qt/qtbase/5.12)
Description
QCombobox popup is not showing the largest entry in list properly. Say, we have 5 entries in combobox as below and "Process Group" has maximum no. of characters
mp_box->addItem( "Name", 1 ); mp_box->addItem( "Threads", 2 ); mp_box->addItem( "System Tree", 3 ); mp_box->addItem( "Process Group", 4 ); mp_box->addItem( "Number", 5 );
In popup, "Process Group" is shown as "Process",i.e "Group" is trimmed from it. This is working fine with 5.12.0 on Mac and fine with all versions on Windows.
Please refer to attached project and snapshots.
Attachments
For Gerrit Dashboard: QTBUG-74565 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
261256,2 | macOS: Don't clip menu item drawing to bounding rect when using CoreText | 5.12 | qt/qtbase | Status: MERGED | +2 | 0 |